# cardio_catch_disease

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
models/: ccd.pkl
notebooks/: SWEETVIZ_REPORT.html  c01.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
src/features/: ap_hi_scaler.pkl  ap_lo_scaler.pkl  bmi_scaler.pkl  diastolic_pressure_scaler.pkl  height_scaler.pkl  pulse_pressure_range_scaler.pkl  systolic_pressure_scaler.pkl  weight_scaler.pkl
