[tool.poetry]
name = "cardio-catch-disease"
version = "0.1.0"
description = ""
authors = ["Gutto Franca <guttolaudie@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
seaborn = "^0.11.2"
yellowbrick = "^1.4"
scikit-learn = "^1.1.1"
pandas-profiling = "^3.2.0"
Boruta = "^0.3"
imbalanced-learn = "^0.9.1"
gunicorn = "^20.1.0"
ipython = "^8.4.0"
sweetviz = "^2.1.4"
ipywidgets = "^7.7.0"
xgboost = "^1.6.1"
catboost = "^1.0.6"
lightgbm = "^3.3.2"
plotly = "^5.9.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
